# mapgen

./: .gitignore  README.md  pyproject.toml
.agent/rules/: general.md  mission.md
artifacts/: plan_skeleton.md
src/mapgen/: __init__.py  cli.py
src/mapgen/acceptance/: run.py
src/mapgen/metrics/: similarity.py
src/mapgen/omap/: __init__.py  io.py  model.py
src/mapgen/raster/: __init__.py  cli.py  config.py
src/mapgen/render/: renderer.py  style.py
tests/: test_acceptance_aoi_01.py  test_cli_roundtrip.py  test_cli_smoke.py  test_omap_roundtrip.py  test_raster_cli.py  test_raster_config.py  test_render_deterministic.py  test_render_matches_golden.py  test_score_cli.py  test_similarity_metric.py
tests/fixtures/: complex.omap  contours_1.omap
tests/golden/aoi_01/: ref.omap  render_config.json
tests/golden/aoi_02/: ref.omap  render_config.json
