[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapgen"
version = "0.1.0"
description = "Deterministic orienteering map generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Google Antigravity Team" },
]
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
mapgen = "mapgen.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mapgen"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "DTZ", "SIM", "PTH"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"
